# rust-production-ai-assistant-app

./: .gitignore  README.md
backend/: Cargo.toml  Dockerfile  docker-compose.yml  package.json
backend/secrets/: mongo_encryption_key.txt  mongo_root_password.txt  mongodb_uri.txt  ollama_api_key.txt  tts_url.txt
backend/src/: circuit_breaker.rs  client.rs  lib.rs  logging.rs  main.rs  retry.rs  state.rs  types.rs
backend/src/api/: chat.rs  health.rs  mod.rs  tts.rs
backend/src/db/: chat_message.rs  mod.rs
backend/tests/: api_chat.rs  circuit_breaker.rs  db_chat_message.rs  integration_api.rs  logging.rs  retry.rs  types.rs
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: mobile-drawer.tsx
frontend/src/components/chat/: chat-container.tsx  chat-input.tsx  chat-message.tsx
frontend/src/components/settings/: settings-page.tsx
frontend/src/lib/: api.ts  settings.ts
frontend/src/types/: chat.ts  settings.ts
k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  mongo-statefulset.yaml  ollama-deployment.yaml  tts-deployment.yaml
tts/: Dockerfile  TTS_SERVER_README.md  requirements.txt  start_tts_server.sh  tts_server.py
