[package]
name = "resilient-ai-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
thiserror = "1.0"
ollama-rs = "0.1.7"
tower-http = { version = "0.5", features = ["cors"] }
log = "0.4"
env_logger = "0.10"
chrono = "0.4"

[lints.rust]
unsafe_code = "forbid"
unused = "allow"
